updated the cart-quantity directory

--- a/05-cart-quantity.html
+++ b/05-cart-quantity.html
@@ -95,12 +95,14 @@
       function createCartQuanty(quantity) {
         if (cartQuantity + quantity > 10) {
           alert('The cart is full')
-        } else if (cartQuantity + quantity < 0) {
-          alert(`Not enough items in the cart`)
-        } else {
-          cartQuantity += quantity
-          console.log(`Cart quantity: ${cartQuantity}`)
+          return
         }
+        if (cartQuantity + quantity < 0) {
+          alert(`Not enough items in the cart`)
+          return
+        }
+        cartQuantity += quantity
+        console.log(`Cart quantity: ${cartQuantity}`)
       }
     </script>
   </body>
