--- a/09-rock-paper-scissors.html
+++ b/09-rock-paper-scissors.html
@@ -29,12 +29,17 @@
       Scissors
     </button>
 
+    <p class="js-result"></p>
+    <p class="js-moves"></p>
+    <p class="js-score"></p>
+
     <button
       onclick="
       score.wins = 0
       score.loses = 0
       score.ties = 0
       localStorage.removeItem('score')
+      updateScoreElement()
     "
     >
       Reset Score
@@ -45,6 +50,8 @@
         loses: 0,
         ties: 0,
       }
+
+      updateScoreElement()
 
       // if (!score) {
       //   score = {
@@ -95,10 +102,19 @@
 
         localStorage.setItem('score', JSON.stringify(score))
 
-        alert(
-          `You picked ${playerMove}. Computer picked ${computerMove}. ${result}.
-Wins: ${score.wins}, Loses: ${score.loses}, Ties: ${score.ties}`
-        )
+        updateScoreElement()
+
+        document.querySelector('.js-result').innerHTML = result
+
+        document.querySelector(
+          '.js-moves'
+        ).innerHTML = `You ${playerMove} - ${computerMove}`
+      }
+
+      function updateScoreElement() {
+        document.querySelector(
+          '.js-score'
+        ).innerHTML = `Wins: ${score.wins}, Loses: ${score.loses}, Ties: ${score.ties}`
       }
 
       function pickComputerMove() {
