--- a/05-cart-quantity.html
+++ b/05-cart-quantity.html
@@ -89,9 +89,12 @@
     >
       Reset Cart
     </button>
+    <p class="js-displayQuantity"></p>
 
     <script>
       let cartQuantity = 0
+      displayCartQuantity()                    
+
       function createCartQuanty(quantity) {
         if (cartQuantity + quantity > 10) {
           alert('The cart is full')
@@ -102,7 +105,11 @@
           return
         }
         cartQuantity += quantity
-        console.log(`Cart quantity: ${cartQuantity}`)
+        displayCartQuantity()
+      }
+
+      function displayCartQuantity() {
+        document.querySelector('.js-displayQuantity').innerHTML = `Cart quantity: ${cartQuantity}`
       }
     </script>
   </body>
