--- a/08-objects.html
+++ b/08-objects.html
@@ -22,6 +22,7 @@
       console.log(product)
       */
 
+      /*
       const product2 = {
         name: 'Shirt',
         ['delivery-time']: '1 day',
@@ -47,8 +48,47 @@
       console.log(JSON.stringify(product2))
 
       const jsonString = JSON.stringify(product2)
-      console.log(JSON.parse(jsonString))
-      
+      console.log(JSON.parse(jsonString)) */
+
+      console.log('hello'.length)
+      console.log('hello'.toUpperCase())
+
+      const object1 = {
+        message: 'hello',
+      }
+      const object2 = object1
+
+      object1.message = 'Good job'
+      console.log(object1)
+      console.log(object2)
+
+      const object3 = {
+        message: 'Good job',
+      }
+      console.log(object3 === object1)
+      console.log(object2 === object1)
+
+      const object4 = {
+        message: 'Good job',
+        price: 799,
+      }
+      // const message = object4.message
+      const { message, price } = object4
+      console.log(message)
+      console.log(price)
+
+      const object5 = {
+        // message: message,
+        message,
+        method: function function1() {
+          console.log('method')
+        },
+        method() {
+          console.log('method')
+        },
+      }
+      console.log(object5)
+      object5.method()
     </script>
   </body>
 </html>
