--- a/11-todo-list.html
+++ b/11-todo-list.html
@@ -2,14 +2,18 @@
 <html>
   <head>
     <title>Todo list</title>
+    <link rel="stylesheet" href="styles/11-todo-list.css" />
   </head>
   <body>
     <p>Todo list</p>
-    <input placeholder="Todo name" class="js-name-input">
-    <button onclick="addTodo()">Add</button>
-    <!-- <p class="js-todo-list"></p> -->
 
-    <div class="js-todo-list"></div>
+    <div class="todo-input-grid">
+      <input placeholder="Todo name" class="js-name-input name-input" />
+      <input type="date" class="js-due-date-input due-date-input" />
+      <button onclick="addTodo()" class="add-todo-button">Add</button>
+    </div>
+
+    <div class="js-todo-list todo-grid"></div>
+    <script src="scripts/11-todo-list.js"></script>
   </body>
-  <script src="scripts/11-todo-list.js"></script>
 </html>
